2002-06-16  wakaba <w@suika.fam.cx>

	* Bunshin.pm: New module.
	* ChangeLog: New file.